# youtube_video_script_writer

./: README.md  full_script.md  hook_creation.md  pyproject.toml  title_thumbnail.md
src/youtube_video_script_writer/: crew.py  frontend_yvsw.py  main.py
src/youtube_video_script_writer/config/: agents.yaml  tasks.yaml
src/youtube_video_script_writer/tools/: custom_tool.py
