[project]
name = "youtube_video_script_writer"
version = "0.1.0"
description = "Youtube-video-script-writer using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.193.2,<1.0.0"
]

[project.scripts]
youtube_video_script_writer = "youtube_video_script_writer.main:run"
run_crew = "youtube_video_script_writer.main:run"
train = "youtube_video_script_writer.main:train"
replay = "youtube_video_script_writer.main:replay"
test = "youtube_video_script_writer.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
